--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "rphaven/common-app": "dev-main",
         "symfony/dependency-injection": "^7.0",
         "symfony/config": "^7.0",
-        "rphaven/uid": "^0.2.0"
+        "rphaven/uid": "dev-main",
+        "symfony/uid": "^7.0",
+        "nyholm/psr7": "^1.8",
+        "php-ds/php-ds": "^1.5"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "*",
