--- a/config/app-common.yaml
+++ b/config/app-common.yaml
@@ -7,6 +7,8 @@ services:
 
   RpHaven\App\:
     resource: '../src/'
+    exclude:
+      - '../src/Uid/Id'
     
   RpHaven\App\Bus\SymfonyCommandBus: ~
   RpHaven\App\Bus\SymfonyQueryBus: ~
