--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "psr/log": "*",
         "symfony/messenger": "^7.0",
         "symfony/http-kernel": "^7.0",
-        "shrikeh/common-app": "dev-main",
+        "shrikeh/common-app": ">=0.1",
         "symfony/dependency-injection": "^7.0",
         "symfony/config": "^7.0",
         "symfony/uid": "^7.0",
