--- a/dev/docker/services/app/Dockerfile
+++ b/dev/docker/services/app/Dockerfile
@@ -1,16 +1,16 @@
 ARG PHP_IMAGE_APP_VERSION="fpm-alpine3.15"
 
-FROM "php:${PHP_IMAGE_APP_VERSION}" as base
+FROM "php:${PHP_IMAGE_APP_VERSION}" AS base
 RUN apk update
 RUN apk add gcc autoconf icu-dev yaml-dev
 RUN apk add --no-cache --virtual .phpize-deps ${PHPIZE_DEPS}
-RUN pecl install -o -f ds pcov pcntl posix yaml
+RUN pecl install -o -f ds pcntl posix yaml
 RUN docker-php-ext-configure intl
 RUN docker-php-ext-install bcmath intl
-RUN docker-php-ext-enable opcache ds pcov bcmath yaml
+RUN docker-php-ext-enable opcache ds bcmath yaml intl
 
 
-FROM base as shrikeh
+FROM base AS shrikeh
 ARG LOCAL_BIN_PATH=/usr/local/bin
 ENV APP_ENV=dev
 
@@ -31,7 +31,7 @@ ADD ./auth.json ./
 RUN ${LOCAL_BIN_PATH}/composer install --no-dev
 
 # Copy only the files from before, leaving before dependencies such as composer and git
-FROM base as app
+FROM base AS app
 ARG LOCAL_BIN_PATH=/usr/local/bin
 
 COPY --from=composer:latest /usr/bin/composer "${LOCAL_BIN_PATH}/composer"
@@ -52,7 +52,7 @@ COPY --from=shrikeh /shrikeh /shrikeh
 RUN composer validate
 RUN chown -R www-data:www-data /shrikeh
 
-FROM app as dev
+FROM app AS dev
 ENV XDEBUG_MODE=coverage
 RUN apk add --update linux-headers
 RUN pecl install xdebug
