--- a/composer.json
+++ b/composer.json
@@ -1,101 +1,110 @@
 {
-    "name": "shrikeh/app-symfony",
-    "description": "Symfony implementations of common App components",
-    "type": "library",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Barney Hanlon",
-            "email": "barney@shrikeh.net"
-        }
-    ],
-    "require": {
-        "php": ">=8.3",
-        "psr/log": "*",
-        "symfony/messenger": "^7.0",
-        "symfony/http-kernel": "^7.0",
-        "shrikeh/common-app": ">=0.1",
-        "symfony/dependency-injection": "^7.0",
-        "symfony/config": "^7.0",
-        "symfony/uid": "^7.0",
-        "nyholm/psr7": "^1.8",
-        "php-ds/php-ds": "^1.5"
-    },
-    "require-dev": {
-      "ext-xdebug": "*",
-      "shrikeh/php-coding-bible": ">=0.2.0",
-      "shrikeh/testing-metapackage": ">=0.3"
-    },
-    "autoload": {
-        "psr-4": {
-            "Shrikeh\\SymfonyApp\\": "src"
-        }
-    },
-    "repositories": [
+  "name": "shrikeh/app-symfony",
+  "description": "Symfony implementations of common App components",
+  "license": "MIT",
+  "type": "library",
+  "authors": [
     {
-        "type": "vcs",
-        "url": "https://github.com/shrikeh/common-app"
+      "name": "Barney Hanlon",
+      "email": "barney@shrikeh.net"
     }
+  ],
+  "require": {
+    "php": ">=8.3",
+    "nyholm/psr7": "^1.8",
+    "php-ds/php-ds": "^1.5",
+    "psr/log": "*",
+    "shrikeh/common-app": ">=0.2",
+    "symfony/config": "^7.0",
+    "symfony/dependency-injection": "^7.0",
+    "symfony/http-kernel": "^7.0",
+    "symfony/messenger": "^7.0",
+    "symfony/uid": "^7.0"
+  },
+  "require-dev": {
+    "ext-xdebug": "*",
+    "phpro/grumphp-shim": "^2.8",
+    "shrikeh/php-coding-bible": ">=0.2.0",
+    "shrikeh/testing-metapackage": ">=0.3",
+    "phpbench/phpbench": "^1.3"
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/shrikeh/common-app"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Shrikeh\\App\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/src"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "ergebnis/composer-normalize": true,
+      "infection/extension-installer": true,
+      "phpro/grumphp-shim": true,
+      "phpstan/extension-installer": true
+    }
+  },
+  "extra": {
+    "composer-normalize": {
+      "indent-size": 2,
+      "indent-style": "space"
+    }
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "@install-codestandards"
     ],
-    "config": {
-        "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true,
-            "ergebnis/composer-normalize": true,
-            "infection/extension-installer": true,
-            "phpstan/extension-installer": true
-        }
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
     },
-    "extra": {
-        "composer-normalize": {
-            "indent-size": 2,
-            "indent-style": "space"
-        }
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "@install-codestandards"
-        ],
-        "behat": "vendor/bin/behat --format progress --format pretty",
-        "craft": [
-            "@test",
-            "@quality"
-        ],
-        "fix": [
-            "@phpcbf",
-            "@psalm:fix",
-            "@composer normalize"
-        ],
-        "infection": "php vendor/bin/infection --show-mutations --threads=8  --min-covered-msi=${MIN_COVERED_MSI:-100} --min-msi=${MIN_MSI:-100}",
-        "install-codestandards": [
-            "PHPCSStandards\\Composer\\Plugin\\Installers\\PHPCodeSniffer\\Plugin::run"
-        ],
-        "metrics": [
-            "@phpunit:all",
-            "@phpmetrics"
-        ],
-        "phpcbf": "vendor/bin/phpcbf",
-        "phpcs": "vendor/bin/phpcs",
-        "phpmd": "vendor/bin/phpmd ./src text ./phpmd.xml.dist",
-        "phpmetrics": "php -d 'error_reporting=E_ALL ^ E_DEPRECATED' vendor/bin/phpmetrics --config=phpmetrics.yml",
-        "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon.dist",
-        "phpunit": [
-            "@phpunit:all",
-            "@infection"
-        ],
-        "phpunit:all": "php -d 'xdebug.coverage=1' -d 'xdebug.mode=coverage' vendor/bin/phpunit --path-coverage --log-junit ${COVERAGE_DIR:-build/logs}/junit.xml --coverage-text  --coverage-html ${DOCS_DIR:-docs}/coverage  --coverage-cobertura ${COVERAGE_DIR:-build/coverage}/cobertura.xml --coverage-clover ${COVERAGE_DIR:-build/coverage}/clover.xml",
-        "psalm": "vendor/bin/psalm",
-        "psalm:fix": "vendor/bin/psalm --alter --issues=all --dry-run",
-        "quality": [
-            "@phpcs",
-            "@phpstan",
-            "@psalm"
-        ],
-        "test": [
-            "@phpunit"
-        ],
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        }
-    }
+    "behat": "vendor/bin/behat --format progress --format pretty",
+    "bench": "@php -d 'xdebug.mode=off' ./vendor/bin/phpbench",
+    "craft": [
+      "@test",
+      "@quality"
+    ],
+    "fix": [
+      "@phpcbf",
+      "@psalm:fix",
+      "@composer normalize"
+    ],
+    "infection": "@php vendor/bin/infection --show-mutations --threads=8  --min-covered-msi=${MIN_COVERED_MSI:-100} --min-msi=${MIN_MSI:-100}",
+    "install-codestandards": [
+      "PHPCSStandards\\Composer\\Plugin\\Installers\\PHPCodeSniffer\\Plugin::run"
+    ],
+    "metrics": [
+      "@phpunit:all",
+      "@phpmetrics"
+    ],
+    "phpcbf": "vendor/bin/phpcbf",
+    "phpcs": "vendor/bin/phpcs",
+    "phpmd": "vendor/bin/phpmd ./src text ./phpmd.xml.dist",
+    "phpmetrics": "@php -d 'error_reporting=E_ALL ^ E_DEPRECATED' vendor/bin/phpmetrics --config=phpmetrics.yml",
+    "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon.dist",
+    "phpunit": [
+      "@phpunit:all",
+      "@infection"
+    ],
+    "phpunit:all": "@php -d 'xdebug.coverage=1' -d 'xdebug.mode=coverage' vendor/bin/phpunit --path-coverage --log-junit ${COVERAGE_DIR:-build/logs}/junit.xml --coverage-text  --coverage-html ${DOCS_DIR:-docs}/coverage  --coverage-cobertura ${COVERAGE_DIR:-build/coverage}/cobertura.xml --coverage-clover ${COVERAGE_DIR:-build/coverage}/clover.xml",
+    "psalm": "vendor/bin/psalm",
+    "psalm:fix": "vendor/bin/psalm --alter --issues=all --dry-run",
+    "quality": [
+      "@phpcs",
+      "@phpstan",
+      "@psalm"
+    ],
+    "test": [
+      "@phpunit"
+    ]
+  }
 }
