--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
   ],
   "require": {
     "php": ">=8.3",
-    "nyholm/psr7": "^1.8",
     "php-ds/php-ds": "^1.5",
     "psr/log": "^3.0",
     "shrikeh/common-app": "^0.2",
@@ -19,20 +18,42 @@
     "symfony/dependency-injection": "^7.0",
     "symfony/http-kernel": "^7.0",
     "symfony/messenger": "^7.0",
-    "symfony/uid": "^7.0"
+    "symfony/uid": "^7.0",
+    "psr/http-message": "^2.0",
+    "symfony/property-access": "^7.1"
   },
   "require-dev": {
     "ext-xdebug": "*",
+    "ext-ctype": "*",
+    "ext-iconv": "*",
     "phpbench/phpbench": "^1.3",
     "phpro/grumphp": "*",
     "phpro/grumphp-shim": "^2.8",
     "shrikeh/php-coding-bible": ">=0.2.0",
-    "shrikeh/testing-metapackage": ">=0.3"
+    "shrikeh/testing-metapackage": ">=0.3",
+    "shrikeh/symfony-app-helloworld": "@dev",
+    "symfony/console": "7.1.*",
+    "symfony/dotenv": "7.1.*",
+    "symfony/flex": "^2",
+    "symfony/framework-bundle": "7.1.*",
+    "symfony/runtime": "7.1.*",
+    "symfony/yaml": "7.1.*",
+    "nyholm/psr7": "^1.8",
+    "symfony/psr-http-message-bridge": "^7.1",
+    "symfony/http-foundation": "^7.1",
+    "ergebnis/json-normalizer": "^4.5",
+    "symfony/serializer": "^7.1",
+    "ergebnis/http-method": "^2.5",
+    "shrikeh/teapot": "^1.0"
   },
   "repositories": [
     {
       "type": "vcs",
       "url": "https://github.com/shrikeh/common-app"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/shrikeh/symfony-app-helloworld"
     }
   ],
   "autoload": {
@@ -42,7 +63,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\": "tests/src"
+      "Tests\\": "tests/src",
+      "App\\": "tests/app/src"
     }
   },
   "config": {
@@ -51,14 +73,20 @@
       "ergebnis/composer-normalize": true,
       "infection/extension-installer": true,
       "phpro/grumphp-shim": true,
-      "phpstan/extension-installer": true
+      "phpstan/extension-installer": true,
+      "symfony/flex": true,
+      "symfony/runtime": true
     }
   },
   "extra": {
     "composer-normalize": {
       "indent-size": 2,
       "indent-style": "space"
-    }
+    },
+    "src-dir": "tests/app",
+    "config-dir": "tests/app/config",
+    "var-dir": "build/var",
+    "public-dir": "tests/app/public"
   },
   "scripts": {
     "post-install-cmd": [
