--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     "symfony/http-kernel": "^7.0",
     "symfony/messenger": "^7.0",
     "symfony/uid": "^7.0",
-    "psr/http-message": "^2.0",
-    "symfony/property-access": "^7.1"
+    "psr/http-message": "^2.0"
   },
   "require-dev": {
     "ext-xdebug": "*",
@@ -32,7 +31,6 @@
     "shrikeh/php-coding-bible": ">=0.2.0",
     "shrikeh/testing-metapackage": ">=0.3",
     "shrikeh/symfony-app-helloworld": "@dev",
-    "symfony/console": "7.1.*",
     "symfony/dotenv": "7.1.*",
     "symfony/flex": "^2",
     "symfony/framework-bundle": "7.1.*",
@@ -41,10 +39,9 @@
     "nyholm/psr7": "^1.8",
     "symfony/psr-http-message-bridge": "^7.1",
     "symfony/http-foundation": "^7.1",
-    "ergebnis/json-normalizer": "^4.5",
-    "symfony/serializer": "^7.1",
-    "ergebnis/http-method": "^2.5",
-    "shrikeh/teapot": "^1.0"
+
+    "shrikeh/teapot": "^1.0",
+    "symfony/property-access": "^7.1"
   },
   "repositories": [
     {
